--- a/Assignments/Week3/Week3.Web/appsettings.json
+++ b/Assignments/Week3/Week3.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=week3_db;User=week3_user;Password=ChangeThisPassword!;CharSet=utf8mb4;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
