feat: implement user registration functionality in the login page, including new fields for username and password, and update database connection settings

--- a/Assignments/Week3/WEB/Web.config
+++ b/Assignments/Week3/WEB/Web.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="MySqlConnection" connectionString="Server=localhost;Database=webkutup;Uid=root;Pwd=;" providerName="MySql.Data.MySqlClient" />
+    <add name="MySqlConnection" connectionString="Server=localhost;Database=webkutup;Uid=webuser;Pwd=StrongPassword!123;AllowPublicKeyRetrieval=True;SslMode=None;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
