--- a/Assignments/Week3/WEB/WEB.csproj
+++ b/Assignments/Week3/WEB/WEB.csproj
@@ -75,6 +75,8 @@
     <Content Include="css\genel.css" />
     <Content Include="css\kitap.css" />
     <Content Include="giris.aspx" />
+    <Content Include="kitaplar.aspx" />
+    <Content Include="about.aspx" />
     <Content Include="Global.asax" />
     <Content Include="images\logo.png" />
     <Content Include="index.aspx" />
@@ -115,6 +117,20 @@
     </Compile>
     <Compile Include="giris.aspx.designer.cs">
       <DependentUpon>giris.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="kitaplar.aspx.cs">
+      <DependentUpon>kitaplar.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="kitaplar.aspx.designer.cs">
+      <DependentUpon>kitaplar.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="about.aspx.cs">
+      <DependentUpon>about.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="about.aspx.designer.cs">
+      <DependentUpon>about.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
