feat: add Web.config file for Razor view engine configuration and include in project

--- a/Assignments/Week5/OgrenciYonetim/OgrenciYonetim.csproj
+++ b/Assignments/Week5/OgrenciYonetim/OgrenciYonetim.csproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Views\Web.config" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
